# spectrograph

./: Cargo.toml  README.md
.github/workflows/: build_push.yml  mirroring.yaml  publish_release.yml
src/: cache.rs  err.rs  interpolator.rs  lib.rs  mla.rs  normalizer.rs  spectrograph.rs
src/colormap/: afmhot.rs  bone.rs  cividis.rs  cool.rs  cool_warm.rs  copper.rs  cubehelix.rs  gnuplot.rs  grays.rs  hot.rs  hsv.rs  inferno.rs  jet.rs  magma.rs  mod.rs  ocean.rs  pink.rs  plasma.rs  rdbu.rs  spectral.rs  spring.rs  summer.rs  terrain.rs  turbo.rs  twilight.rs  twilight_shifted.rs  viridis.rs  winter.rs
